--- a/tex/sections/project_description.tex
+++ b/tex/sections/project_description.tex
@@ -19,21 +19,27 @@ provide the user with a user-friendly GUI (Graphical User Interface) while compl
 international standards for audio and video and electronic devices. \newline
 
 For design and implementation of the device, a research is needed in: \\
-- Circuit/hardware design \\
-- D/A audio converters \\
-- Standardized audio input/output formats \\
-- Audio file formats \\
-- Standardized video input/output formats \\
-- Video file formats \\
-- Time codes for synchronization \\
-- User feedback for feasible GUI design \newline
+
+\begin{itemize}
+\item Circuit/hardware design
+\item D/A audio converters
+\item Standardized audio input/output formats
+\item Audio file formats
+\item Standardized video input/output formats
+\item Video file formats
+\item Time codes for synchronization
+\item User feedback for feasible GUI design
+\end{itemize}
 
 This project is already in the early stages of development as part of an apprenticeship in
 entrepreneurship (iværksætterpraktik) at Navitas Science and Innovation. \\
 Current status on project: \\
-- Requirements specification finished \\
-- FURPS finished \\
-- Market research ongoing \newline
+
+\begin{itemize}
+\item Requirements specification finished
+\item FURPS finished
+\item Market research ongoing
+\end{itemize}
 
 The project is requesting confidentiality as the device is in development intended for market release to
 prosumers in the music industry, thus an eventual project partner must sign a non-disclosure
