--- a/tex/sections/project_research.tex
+++ b/tex/sections/project_research.tex
@@ -13,32 +13,41 @@ As several of the available technologies heavily rely on laptops and home-made s
 
 Following subsections briefly introduce the most popular tehcnoloqies used currently by touring artists and their personnel with a list of their pros and cons. This chapter concludes with an introduction of Showman's desired features. \\
 
-\subsection{Similar Projects}
+\section{Similar Projects}
 This subsection investigates similar projects from Scandinavia. \\
 
-\subsubsection{Interactive Performance System}
+\subsection{Interactive Performance System}
 Mircea Gabriel Eftemie, Medialogy-alumni from Aalborg University developed a system called '\textbf{Interactive Performance System}', a visual system for concert performances: https://videnskab.dk/kultur-samfund/heavy-metal-pa-universitetet. The project was developed using Open Source technology as his Bachelor's Project with fellow students Thomas Wisbech, Lasse Wingreen and Brenly Bernard. \newline
 
 The purpose of the system was to display theatrical and visual elements during performance without the aid of technical personnel to enhance the performance experience for the audience. The system combined two inputs: A static and dynamic input. The static inputs were prepared beforehand. The static inputs were controlled by an input during the performance partly from a webcam that filmed the audience and the artists and partly from a microphone that recorded and transmitted the audio on stage. \newline
 
 Mircea played guitar in now-defunct Mnemic that utilized the Interactive Performance System. The project was put to rest after Mnemic's dissolution and the project status remains unclear. \\
 
-\subsubsection{The Dark Player}
+\subsection{The Dark Player}
 Members of Swedish band Darkane developed a system for backing track playback device called '\textbf{The Dark Player}' after expressing dissatifaction with current products available. I am in the process of tracking down the members to investigate their system further. \\
 
-\subsection{Similar Products}
+\section{Similar Products}
 Digital Audio Workstations are the hub for 99 percent of all modern musicians and producers. (Source: https://ask.audio/articles/the-top-11-most-popular-daws-you-voted-for) \newline
 
 Products similar to Showman exist in many forms: From simple iPods to complex systems, artists can pick and choose any system available in several configurations depending on financial status. However, some proves to be too unreliant, unstable or reliant on other pieces of hardware to function as intended. The subsubsections below outlines the most widely used products. This subsection conludes with Showman's intended features. \\
 
-\subsubsection{Cymatic Audio LP-16}
+\subsection{Cymatic Audio LP-16}
 The LP-16 (http://cymaticaudio.com/lp-16-productpage/) is a multi-track player for live perfomances that spares the user of using laptop and computer audio interface in a live environment. Its primary use is backing tracks, but its other features include virtual sound checks, triggering synthesizers or samplers, drigin light shows and controlling devices. \\
 
-- Direct from USB hard drive multi-track playback: 16 tracks at 24-bit, 44.1/48 kHz
-- Creation and editing of setting and playlist offline with software uTool
-- 16 \textit{unbalanced} analog 1/4'' tip-sleeve outputs
-- Mac OS-X and Windows PC compatible
-- 249 EUR at thomann.de
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.2]{./pictures/lp.png}
+\caption{Press photo of Live Player LP-16. Source: http://cymaticaudio.com/lp-16-productpage/}
+\label{fig:lp.png}
+\end{figure}
+
+\begin{itemize}
+\item Direct from USB hard drive multi-track playback: 16 tracks at 24-bit, 44.1/48 kHz
+\item Creation and editing of setting and playlist offline with software uTool
+\item 16 \textit{unbalanced} analog 1/4'' tip-sleeve outputs
+\item Mac OS-X and Windows PC compatible
+\item 249 EUR at thomann.de
+\end{itemize}
 
 \begin{figure}[H]
 \centering
@@ -49,23 +58,25 @@ The LP-16 (http://cymaticaudio.com/lp-16-productpage/) is a multi-track player f
 
 Minimum requirements for connection to mixing board: \\
 
-- Up 16 x 1/4'' tip-sleeve jack-cables: 14.90 EUR for the sssnake MPP8030 at thomann.de \\
-- Up to 16 x line drivers: 2 x 103 EUR (Behringer DI800 Ultra-DI PRo v2 from thomann.de): 206 EUR \\
-- USB hard drive: SanDisk USB 2.0 Stick Cruzer: 19.95 EUR \\
-- Assuming local venue provides XLR-cables: \\
-	Minimum expenses to use LP-16: 489.85 EUR \\
+\begin{itemize}
+\item Up 16 x 1/4'' tip-sleeve jack-cables: 14.90 EUR for the sssnake MPP8030 at thomann.de
+\item Up to 16 x line drivers: 2 x 103 EUR (Behringer DI800 Ultra-DI PRo v2 from thomann.de): 206 EUR
+\item USB hard drive: SanDisk USB 2.0 Stick Cruzer: 19.95 EUR
+\item Assuming local venue provides XLR-cables: Minimum expenses to use LP-16: 489.85 EUR
+\end{itemize}
 
 Using low-budget and low-quality accessories, the LP-16 is still relatively expensive considering memory is external USB hard drive, making it vulnerable to vibrations on stage.
 
-\subsubsection{Ableton Live}
+\subsection{Ableton Live}
 Ableton Live is an audio MIDI sequencer and digital audio workstation (DAW) software for Mac OS-X and Windows PC, purchased with proprietary license. Ableton Live is designed to be an instrument for live performances as well as a tool for composing, recording, arranging, mixing, and mastering. \newline
 
 Ableton Live need an audio interface for connection to mixing board. Applications are wide and very much individual - Users purchase audio interface to suit their work flow and requirements.  Prices for Ableton Live start at 209 euros for a Student license.\\
 
 Minimum requirements for connection to mixing board: \\
-
-- Ableton Live software installed on chosen laptop (Mac OS-X or Windows PC) \\
-- Audio interface (they start from 2 channel outputs and upwards) \\
+\begin{itemize}
+\item Ableton Live software installed on chosen laptop (Mac OS-X or Windows PC) \\
+\item Audio interface (they start from 2 channel outputs and upwards) \\
+\end{itemize}
 
 \begin{figure}[H]
 \centering
@@ -74,7 +85,7 @@ Minimum requirements for connection to mixing board: \\
 \label{fig:ableton.png}
 \end{figure}
 
-\subsubsection{QLab}
+\subsection{QLab}
 QLab is a free download that combines audio, video and lightning control in one package (http://figure53.com/qlab/). QLab controls playback of these element during a live perfomance. The operator triggers events such as light-, audio- and video-cue(s) in a cue list, which contain cues to trigger an event that the user edited. \newline
 
 \textbf{Audio Playback:} QLab allows end-user or designer to align audio files in sequential order. Once inserted in cue list, end-user can manipulate by looping, change amplitude, volume, fades, etc. End-user need external audio interface to route the audio to mixing board. More on audio interface later. \\
@@ -90,7 +101,7 @@ QLab is a free download that combines audio, video and lightning control in one 
 \label{fig:qlab.png}
 \end{figure}
 
-\subsubsection{Logic Pro X}
+\subsection{Logic Pro X}
 Logic Pro X is a DAW and MIDI sequencer software application for the Mac OS-X platform. Logic's primary function is music production, but is also widely used for playback in live performances. \newline
 
 Developed by Apple Inc., the current proprietary license is released macOS. Logic version 5.5.1 wasthe last version bo be released for Windows. Version 6 and onward, Logic is only available for Mac OS. Like QLab, Logic need external audio interface to connect with mixing board. \\
@@ -104,7 +115,7 @@ Developed by Apple Inc., the current proprietary license is released macOS. Logi
 
 \textbf{Price:} 199.99 USD in App Store. \\
 
-\subsubsection{MainStage}
+\subsection{MainStage}
 Even though Apple's Logic Pro X is capable of playback of multichannel of audio, its primary function is music production: Recording and editing of audio tracks. \newline
 
 MainStage is designed exclusively for live performances with a few key features, play back of pre-recorded backing tracks being the most notable feature. Like QLab and Logic, MainStage need external audio interface to connect with mixing board. \\
@@ -118,7 +129,7 @@ MainStage is designed exclusively for live performances with a few key features,
 
 \textbf{Price:} 29.99 USD in App Store. \\
 
-\subsubsection{Pro Tools}
+\subsection{Pro Tools}
 Pro Tools is a DAW developed and release by Avid Technologies for Windows and masOS. Its many features include audio recording, music production, editing, post production, etc. \newline
 
 Pro Tools can run as standalone software \textit{or} operate using external A/D converters, PCIe cards with onboard DSPs. Like QLab, Logic and MainStage, Pro Tools need external audio interface to connect with mixing board. \\
@@ -132,14 +143,14 @@ Pro Tools can run as standalone software \textit{or} operate using external A/D 
 
 \textbf{Price:} From free software for Pro Tools | First with limited features to  559,00 EUR for one-time purchase with annual upgrade plan.
 
-\subsubsection{Open Source Products}
+\subsection{Open Source Products}
 Quite a few Do-It-Yourself (DIY) builders, enthusiasts, hobbyists and likeminded individuals have attempted to produce similar products with various degrees of success. \newline
 
 Several open source technologies are available for product development:\textbf{Arduino} (https://www.arduino.cc/), \textbf{Raspberry Pi} (https://www.raspberrypi.org/) and \textbf{BeagleBone Black} (https://beagleboard.org/black) counts as the most widely used technologies. \newline
 
 As Showman is intended for market release for consumers and prosumers, open source solutions are not within the scope of the project at the moment as additional research in open source regulations and their marketability is necessary - A research that can lead the project to a sidetrack and the time frame does not allow for in-depth investigations. \\
 
-\subsubsection{Showman}
+\subsection{Showman}
 The intended features for Showman is shown in Figure ~\ref{fig:showman.png}
 
 \begin{figure}[H]
@@ -149,18 +160,21 @@ The intended features for Showman is shown in Figure ~\ref{fig:showman.png}
 \label{fig:showman.png}
 \end{figure}
 
-\subsection{Literature}
+\section{Literature}
 As mentioned in the description, a research in these subjects are needed for design, implementation and test of Showman: \\
 
 For design and implementation of the device, a research is needed in: \\
-- Circuit/hardware design \\
-- D/A audio converters \\
-- Standardized audio input/output formats \\
-- Audio file formats \\
-- Standardized video input/output formats \\
-- Video file formats \\
-- Time codes for synchronization \\
-- User feedback for feasible GUI design \\
+
+\begin{itemize}
+\item Circuit/hardware design
+\item D/A audio converters
+\item Standardized audio input/output formats
+\item Audio file formats
+\item Standardized video input/output formats
+\item Video file formats
+\item Time codes for synchronizatio
+\item User feedback for feasible GUI design
+\end{itemize}
 
 Selected chapters from: \\
 \textbf{Ken C. Pohlmann}: Principles of Digital Audio Sixth Edition. (\textbf{ISBN: 987-0-07-166346-5}). This is the starting point for the literature. Additional textbooks from the AU Library or from other sources will be investigated when additional information becomes relevant. \\
@@ -171,4 +185,4 @@ Selected chapters from: \\
 
 \textbf{Datasheets}: In addition to textbooks, datasheets for relevant parts will be investigated thoroughly and evaluated upon before implementation. \\
 
-\textbf{GUI Design}: Research in GUI design is a must have for design of software application GUI. It was the project's wish to work as a team with a more experienced programmer and student from the \textbf{Information and Communication Technology} branch of ASE, but none were available. However, 2 programmers has expressed interest in occassional assistance and guidance during design and implementation process of GUI.
+\textbf{GUI Design}: Research in GUI design is a must have for design of software application GUI. It was the project's wish to work as a team with a more experienced programmer and student from the \textbf{Information and Communication Technology} branch of ASE, but none were available. However, 2 external programmers has expressed interest in occassional assistance and guidance during design and implementation process of GUI.
